--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "type": "module",
   "scripts": {
-    "use": "vite --config ./src/use/vite.config.ts"
+    "use": "vite --config ./src/use/vite.config.ts",
+    "useTransition": "vite --config ./src/useTransition/vite.config.ts"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.1",
+    "neverthrow": "^8.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0"
